fix: format footer and header markup for improved readability

--- a/less/footer.less
+++ b/less/footer.less
@@ -1,5 +1,4 @@
-
-footer{
+// Dependencies: variables.less
     .footer{
         background-color: @bg-color;
         padding: 50px 0;
@@ -34,4 +33,3 @@ footer{
         margin-top: 40px;
         font-size: 16px;
     }
-}
